--- a/assets/partials/partial-event.html
+++ b/assets/partials/partial-event.html
@@ -77,8 +77,7 @@
                 </div>
                 <div ng-if="!loggedIn">
                     <article>
-                        <p>To participate in an event, you need to login first.</p>
-                        <div class='register-btn' onclick="showLoginModal()">Login or Register</div>
+                        <h1 style="text-align:center;">Registrations Closed!</h1>
                     </article>
                 </div>
             </div>
