--- a/assets/partials/partial-support.html
+++ b/assets/partials/partial-support.html
@@ -100,7 +100,7 @@
                                     </div>
                                 </div>
                                 <div class="controls">
-                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message" onclick="submitContact()" />
+                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message" onclick="alert('Contact Form Inactive!')" />
                                 </div>
                                 <div class="contact-msg"></div>
                             </form>
