--- a/event/assets/partials/partial-support.html
+++ b/event/assets/partials/partial-support.html
@@ -32,7 +32,7 @@
 
 
                             <p>From Jaipur Central Railway Station / SindhiCamp Bus Stand :</p>
-                            <p>Ola/TFS/Jugnoo and autos are easily available from the Jaipur Central Railway Station / SindhiCamp Bus Stand.<br/>
+                            <p>Ola/Uber/Jugnoo and autos are easily available from the Jaipur Central Railway Station / SindhiCamp Bus Stand.<br/>
                                 The estimated rates are Rs. 150-200.
                             </p>
                         </div>
@@ -66,11 +66,11 @@
                                 </a>
                                 <a>
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="485.2" height="485.2" viewBox="0 0 485.2 485.2" xml:space="preserve"><path d="M242.6 0C108.6 0 0 108.6 0 242.6c0 134 108.6 242.6 242.6 242.6 134 0 242.6-108.6 242.6-242.6C485.2 108.6 376.6 0 242.6 0zM370.7 354l-19.4 19.4c-3.5 3.5-13.6 5.6-13.9 5.6 -61.5 0.5-120.6-23.6-164.1-67.1 -43.6-43.6-67.8-103-67.1-164.7 0 0 2.2-9.9 5.7-13.3l19.4-19.4c7.1-7.1 20.8-10.4 30.3-7.2l4.1 1.4c9.5 3.2 19.6 13.7 22.2 23.5l9.8 35.9c2.6 9.7-0.9 23.6-8 30.7l-13 13c12.7 47.1 49.7 84.1 96.9 96.9l13-13c7.1-7.1 21-10.7 30.7-8.1l35.9 9.8c9.7 2.7 20.3 12.6 23.5 22.2l1.4 4.1C381 333.3 377.8 346.9 370.7 354z"></path></svg>
-                                    <span>+91-9782113840 <em>(for accomodation)</em></span>
+                                    <span>+91-9983028726 <em>(for accomodation)</em></span>
                                 </a>
                                 <a>
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="485.2" height="485.2" viewBox="0 0 485.2 485.2" xml:space="preserve"><path d="M242.6 0C108.6 0 0 108.6 0 242.6c0 134 108.6 242.6 242.6 242.6 134 0 242.6-108.6 242.6-242.6C485.2 108.6 376.6 0 242.6 0zM370.7 354l-19.4 19.4c-3.5 3.5-13.6 5.6-13.9 5.6 -61.5 0.5-120.6-23.6-164.1-67.1 -43.6-43.6-67.8-103-67.1-164.7 0 0 2.2-9.9 5.7-13.3l19.4-19.4c7.1-7.1 20.8-10.4 30.3-7.2l4.1 1.4c9.5 3.2 19.6 13.7 22.2 23.5l9.8 35.9c2.6 9.7-0.9 23.6-8 30.7l-13 13c12.7 47.1 49.7 84.1 96.9 96.9l13-13c7.1-7.1 21-10.7 30.7-8.1l35.9 9.8c9.7 2.7 20.3 12.6 23.5 22.2l1.4 4.1C381 333.3 377.8 346.9 370.7 354z"></path></svg>
-                                    <span>+91-9782606370 <em>(for sponsorship)</em></span>
+                                    <span>+91-8952884012 <em>(for sponsorship)</em></span>
                                 </a>
                                 <a>
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="430.1" height="430.1" viewBox="0 0 430.1 430.1" xml:space="preserve"><path d="M356.2 107.1c-1.5-5.7-4.6-11.9-6.9-17.2C321.7 23.7 261.6 0 213.1 0 148.1 0 76.5 43.6 66.9 133.4v18.4c0 0.8 0.3 7.6 0.6 11.1 5.4 42.8 39.1 88.3 64.4 131.1 27.1 45.9 55.3 91 83.2 136.1 17.2-29.4 34.4-59.3 51.2-87.9 4.6-8.4 9.9-16.8 14.5-24.9 3.1-5.3 8.9-10.7 11.6-15.7 27.1-49.7 70.8-99.8 70.8-149.1v-20.3C363.2 126.9 356.6 108.2 356.2 107.1zM214.2 199.2c-19.1 0-40-9.6-50.3-35.9 -1.5-4.2-1.4-12.6-1.4-13.4v-11.9c0-33.6 28.6-48.9 53.4-48.9 30.6 0 54.2 24.5 54.2 55.1C270.1 174.7 244.8 199.2 214.2 199.2z"></path></svg>
