Fonts on Endevaour and zarrurat change

--- a/event/assets/partials/partial-zarurat.html
+++ b/event/assets/partials/partial-zarurat.html
@@ -32,7 +32,8 @@
                 <div>
                     <p>
                         In order to share your views and make a contribution please feel free to contact<br>
-                        <b>Anurag Verma:</b> +91-9166744234 <br/>
+                        <b>Vinuj Arora:</b> +91-9414250585 <br/>
+                        <b>Damini Malik:</b> +91-9694943151 <br/>
                         <b>Email:</b> zarurat@jecrc.ac.in
                     </p>
                 </div>
