Alumni Detail Change

--- a/event/assets/partials/partial-alumni.html
+++ b/event/assets/partials/partial-alumni.html
@@ -24,8 +24,8 @@
             <div class="row">
                 <div>
                     <p>For your queries regarding alumni events contact</p>
-                    <p>Anurag Mishra : 7728028818, 9982682451 <br/>
-                        Abhimanyu Kumar : 7221071046
+                    <p>Sanya Khatri : 8561868161<br/>
+                      Vaibhav Vijay : 9982267285
                     </p>
                 </div>
             </div>
