--- a/mobile_assests/css/style.css
+++ b/mobile_assests/css/style.css
@@ -1,7 +1,7 @@
 body,html {
   margin: 0px !important;
   padding: 0px !important;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 /*Background Image URl*/
 body {
