--- a/event/assets/partials/partial-support.html
+++ b/event/assets/partials/partial-support.html
@@ -78,32 +78,7 @@
                                 </a>
                             </div>
                             <div class="col-md-7">
-                                <form class="contact-form" role="form" id="contact-Form">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="name" placeholder="Name" required />
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="email" class="form-control" name="email" placeholder="Email" required />
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" name="number" placeholder="Contact number" required />
-                                    </div>
-                                </div>
-                                <div class="form-group ">
-                                    <div class="input-group">
-                                        <textarea name="message" class="form-control " rows="4" cols="78" placeholder="Enter your message here" required="true"></textarea>
-                                    </div>
-                                </div>
-                                <div class="controls">
-                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message" onclick="alert('Contact Form Inactive!')" />
-                                </div>
-                                <div class="contact-msg"></div>
-                            </form>
+                               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQ1sDiDHsDAnQTLngfCOdTRV_GMd6LCFkt-6y7VPSh0IBTGQ/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                             </div>
                         </div>
                     </div>
