--- a/event/assets/partials/partial-support.html
+++ b/event/assets/partials/partial-support.html
@@ -78,32 +78,32 @@
                                 </a>
                             </div>
                             <div class="col-md-7">
-                                 <form class="contact-form" role="form" id="contact-Form" action="https://formspree.io/renaissance@jecrc.ac.in" method="POST">
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="text" class="form-control" name="name" placeholder="Name" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="email" class="form-control" name="_replyto" placeholder="Email" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="text" class="form-control" name="number" placeholder="Contact number" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group ">
- -                                    <div class="input-group">
- -                                        <textarea name="message" class="form-control " rows="4" cols="78" placeholder="Enter your message here" required="true"></textarea>
- -                                    </div>
- -                                </div>
- -                                <div class="controls">
- -                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message"/>
- -                                </div>
- -                                <div class="contact-msg"></div>
- -                            </form>
+                                <form class="contact-form" role="form" id="contact-Form" action="https://formspree.io/renaissance@jecrc.ac.in" method="POST">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="name" placeholder="Name" required />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="email" class="form-control" name="_replyto" placeholder="Email" required />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="number" placeholder="Contact number" required />
+                                    </div>
+                                </div>
+                                <div class="form-group ">
+                                    <div class="input-group">
+                                        <textarea name="message" class="form-control " rows="4" cols="78" placeholder="Enter your message here" required="true"></textarea>
+                                    </div>
+                                </div>
+                                <div class="controls">
+                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message" />
+                                </div>
+                                <div class="contact-msg"></div>
+                            </form>
                             </div>
                         </div>
                     </div>
