--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -8,13 +8,13 @@
         </div>
         <div class='event-content' id="sponsors">
             <article>
-                <div class="col-sm-3">
-                    <h2>Communication Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/communication/mts-logo.png" />
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Communication Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/communication/mts-logo.png" /> -->
 				
-                </div>
-                </div>
+                <!-- </div> -->
+                <!-- </div> -->
 				
                 <div class="col-sm-6" style="padding-top:1em;">
                   <h2>Event Partners</h2>
@@ -25,69 +25,69 @@
                       <img src="assets/img/logo/sponsors/event/hackerearth.png" />
                   </div>
                 </div>
-                <div class="col-sm-3">
-                    <h2>Online Shopping Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/online%20shopping/ebay.png" />
-                    </div>
-                </div>
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Online Shopping Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/online%20shopping/ebay.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
 
             </article>
             <article>
-                <div class="col-sm-3">
-                  <h2>Mobility Partner</h2>
-                  <div class="sponsor col-sm-offset-2 col-sm-8">
-                    <img src="assets/img/logo/sponsors/singles/mobility/ola.png" alt="Ola">
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>All Terrain Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/all-terrain-partner.png" style="padding-top:1em;" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Music Streaming Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/music%20streaming/saavn.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Technology Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/rit-solution.png" />
-                    </div>
-                </div>
+                <!-- <div class="col-sm-3"> -->
+                  <!-- <h2>Mobility Partner</h2> -->
+                  <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                    <!-- <img src="assets/img/logo/sponsors/singles/mobility/ola.png" alt="Ola"> -->
+                  <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>All Terrain Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/all-terrain-partner.png" style="padding-top:1em;" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Music Streaming Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/music%20streaming/saavn.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Technology Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/rit-solution.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
 
             </article>
-            <article>
-                <h2>Brand Partners</h2>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/hi%20tech%20offset.png" style="padding: 1em 18%;"/>
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/maharaja.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/tvs.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/ribbun.png" />
-                </div>
-                <div class="clearfix"></div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/champs11.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/ATNT.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/ShivShakti.png" style="padding: 1em 0 3em 0;"/>
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/brand/vinayak.jpg" />
-                </div>
-            </article>
+            <!-- <article> -->
+                <!-- <h2>Brand Partners</h2> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/hi%20tech%20offset.png" style="padding: 1em 18%;"/> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/maharaja.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/tvs.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/ribbun.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="clearfix"></div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/champs11.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/ATNT.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/ShivShakti.png" style="padding: 1em 0 3em 0;"/> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/brand/vinayak.jpg" /> -->
+                <!-- </div> -->
+            <!-- </article> -->
             <article>
                 <h2>Education Partners</h2>
                 <div class="sponsor col-sm-3">
@@ -105,9 +105,9 @@
                 <div class="sponsor col-sm-offset-3 col-sm-3">
                     <img src="assets/img/logo/sponsors/education/endeavour.png" />
                 </div>
-                <div class="sponsor col-sm-3"  style="padding-top: 1.5em;">
-                    <img src="assets/img/logo/sponsors/education/mecha-day.png" />
-                </div>
+                <!-- <div class="sponsor col-sm-3"  style="padding-top: 1.5em;"> -->
+                    <!-- <img src="assets/img/logo/sponsors/education/mecha-day.png" /> -->
+                <!-- </div> -->
             </article>
             <article>
                 <h2>Food Partners</h2>
@@ -135,106 +135,106 @@
                 </div>
 
             </article>
-            <article>
-                <div class="col-sm-3">
-                    <h2>Mobile Gaming Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/mobile%20gaming/frappe.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Real Estate Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/real-estate-partner.jpg" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Radio Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8" style="padding-left: 1em; padding-right: 1em;" >
-                        <img src="assets/img/logo/sponsors/singles/radio/myfm.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Online Publicity Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/online%20publicity/hojc%20logo.png" />
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="col-sm-3">
-                    <h2>Online City Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/online%20city/JCB.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Style Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/style/sizzlin.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Cafe Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/coffee-corner.jpg" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Firework Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/skpatakha.png" />
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="col-sm-3">
-                    <h2>Grooming Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/singles/riya.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Lifestyle Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/lifestyle-partner.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Travel Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/king-hills.png" style="padding-top:3em;" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>Fitness Partner</h2>
-                    <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/singles/fitness.png" />
-                    </div>
-                </div>
-            </article>
-            <article>
-                <h2>Outreach Partners</h2>
-                <div class="sponsor col-sm-3">
-                  <img src="assets/img/logo/sponsors/outreach/yepdesk.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/outreach/festPav.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/outreach/college%20fever.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                    <img src="assets/img/logo/sponsors/outreach/Twenty19_logo_White_.png" />
-                </div>
-                <div class="clearfix"></div>
-                <div class="sponsor col-sm-offset-3 col-sm-3">
-                  <img src="assets/img/logo/sponsors/outreach/festsamachar.png" />
-                </div>
-                <div class="sponsor col-sm-3">
-                  <img src="assets/img/logo/sponsors/outreach/online-media-partner-knowafest.png" />
-                </div>
-            </article>
+            <!-- <article> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Mobile Gaming Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/mobile%20gaming/frappe.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Real Estate Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/real-estate-partner.jpg" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Radio Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8" style="padding-left: 1em; padding-right: 1em;" > -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/radio/myfm.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Online Publicity Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/online%20publicity/hojc%20logo.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </article> -->
+            <!-- <article> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Online City Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/online%20city/JCB.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Style Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/style/sizzlin.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Cafe Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/coffee-corner.jpg" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Firework Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/skpatakha.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </article> -->
+            <!-- <article> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Grooming Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-2 col-sm-8"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/riya.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Lifestyle Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/lifestyle-partner.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Travel Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/king-hills.png" style="padding-top:3em;" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="col-sm-3"> -->
+                    <!-- <h2>Fitness Partner</h2> -->
+                    <!-- <div class="sponsor col-sm-offset-1 col-sm-10"> -->
+                        <!-- <img src="assets/img/logo/sponsors/singles/fitness.png" /> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </article> -->
+            <!-- <article> -->
+                <!-- <h2>Outreach Partners</h2> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                  <!-- <img src="assets/img/logo/sponsors/outreach/yepdesk.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/outreach/festPav.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/outreach/college%20fever.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                    <!-- <img src="assets/img/logo/sponsors/outreach/Twenty19_logo_White_.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="clearfix"></div> -->
+                <!-- <div class="sponsor col-sm-offset-3 col-sm-3"> -->
+                  <!-- <img src="assets/img/logo/sponsors/outreach/festsamachar.png" /> -->
+                <!-- </div> -->
+                <!-- <div class="sponsor col-sm-3"> -->
+                  <!-- <img src="assets/img/logo/sponsors/outreach/online-media-partner-knowafest.png" /> -->
+                <!-- </div> -->
+            <!-- </article> -->
         </div>
     </div>
 </main>
