Support Details Update

--- a/event/assets/partials/partial-support.html
+++ b/event/assets/partials/partial-support.html
@@ -18,9 +18,8 @@
                     <div role="tabpanel" class="tab-pane fade active in" id="tab1">
                         <div class="row">
                             <ul>
-                                <li>Create a Renaissance'17 account. Login with your credentials.</li>
                                 <li>Navigate to any of the event section and click on your desired event. On the event page, click "PARTICIPATE"</li>
-                                <li>You can view all your registrations by logging into your account, navigating to events section and  clicking on registrations option in navigation menu </li>
+                                <li>Submit your registration by filling the form.</li>
                                 <li>Apart from online registration, you can also register on-the-spot, although we recommend you to register online</li>
                             </ul>
                             </p>
