Google Form Link

--- a/event/assets/partials/partial-event.html
+++ b/event/assets/partials/partial-event.html
@@ -77,7 +77,9 @@
                 </div>
                 <div ng-if="!loggedIn">
                     <article>
-                        <h1 style="text-align:center;">Registrations Closed!</h1>
+                        <h1 style="text-align:center;font-size:30px;">
+                           <a href="https://goo.gl/forms/h2C8HWyy7jcMVHLn1" target="_blank">Click to Register</a>
+                        </h1>
                     </article>
                 </div>
             </div>
