--- a/event/assets/partials/partial-support.html
+++ b/event/assets/partials/partial-support.html
@@ -18,9 +18,8 @@
                     <div role="tabpanel" class="tab-pane fade active in" id="tab1">
                         <div class="row">
                             <ul>
-                                <li>Create a Renaissance'17 account. Login with your credentials.</li>
                                 <li>Navigate to any of the event section and click on your desired event. On the event page, click "PARTICIPATE"</li>
-                                <li>You can view all your registrations by logging into your account, navigating to events section and  clicking on registrations option in navigation menu </li>
+                                <li>Submit your registration by filling the form.</li>
                                 <li>Apart from online registration, you can also register on-the-spot, although we recommend you to register online</li>
                             </ul>
                             </p>
@@ -78,32 +77,32 @@
                                 </a>
                             </div>
                             <div class="col-md-7">
-                                 <form class="contact-form" role="form" id="contact-Form" action="https://formspree.io/renaissance@jecrc.ac.in" method="POST">
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="text" class="form-control" name="name" placeholder="Name" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="email" class="form-control" name="_replyto" placeholder="Email" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group">
- -                                    <div class="input-group">
- -                                        <input type="text" class="form-control" name="number" placeholder="Contact number" required />
- -                                    </div>
- -                                </div>
- -                                <div class="form-group ">
- -                                    <div class="input-group">
- -                                        <textarea name="message" class="form-control " rows="4" cols="78" placeholder="Enter your message here" required="true"></textarea>
- -                                    </div>
- -                                </div>
- -                                <div class="controls">
- -                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message"/>
- -                                </div>
- -                                <div class="contact-msg"></div>
- -                            </form>
+                                <form class="contact-form" role="form" id="contact-Form" action="https://formspree.io/renaissance@jecrc.ac.in" method="POST">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="name" placeholder="Name" required />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="email" class="form-control" name="_replyto" placeholder="Email" required />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="number" placeholder="Contact number" required />
+                                    </div>
+                                </div>
+                                <div class="form-group ">
+                                    <div class="input-group">
+                                        <textarea name="message" class="form-control " rows="4" cols="78" placeholder="Enter your message here" required="true"></textarea>
+                                    </div>
+                                </div>
+                                <div class="controls">
+                                    <input id="contact-submit" type="submit" class="btn btn-primary" value="Send Message" />
+                                </div>
+                                <div class="contact-msg"></div>
+                            </form>
                             </div>
                         </div>
                     </div>
