--- a/event/assets/partials/partial-event.html
+++ b/event/assets/partials/partial-event.html
@@ -78,7 +78,10 @@
                 <div ng-if="!loggedIn">
                     <article>
                         <h1 style="text-align:center;font-size:30px;">
-                           <a href="https://goo.gl/forms/h2C8HWyy7jcMVHLn1" target="_blank">Click to Register</a>
+                           <a href="https://goo.gl/forms/2rQhT26M8fWveax43" target="_blank" ng-if="category == 'splash' ">Click to Register</a>
+                           <a href="https://goo.gl/forms/h2C8HWyy7jcMVHLn1" target="_blank" ng-if="category == 'endeavour' ">Click to Register</a>
+                          <a href="https://goo.gl/forms/ye4bioE1RtObvgho2" target="_blank" ng-if="category == 'quanta' ">Click to Register</a>
+                          <a href="https://goo.gl/forms/MmoG3K6y2cPCZq8w1" target="_blank" ng-if="category == 'alumni' ">Click To Register</a>
                         </h1>
                     </article>
                 </div>
