--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -526,8 +526,8 @@ CG & CF Floor, C - Block (App Science)
     </div>
 </main>
 <div class="navigation">
-    <div class="menu-icon" class="animate-1" ui-sref="events">
-        <div class="menu-bars"></div>
-    </div>
+  <a href="javascript:history.back()">
+  <div class="menu-icon" ><div class="menu-bars"></div></div>
+</a>
     <div class="clearfix"></div>
 </div>
