--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -8,7 +8,7 @@
         </div>
         <div class='event-content' id="sponsors">
             <article>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <h2>Ethinic Partner</h2>
                     <div class="sponsor col-sm-offset-2 col-sm-8">
                         <img src="assets/img/logo/sponsors/new/kishori.png" />
@@ -16,14 +16,23 @@
                 </div>
                 </div>
 
-                <div class="col-sm-6" style="padding-top:1em;">
+                <div class="col-sm-8" style="padding-top:1em;">
                   <h2>Event Partners</h2>
-                  <div class="sponsor col-sm-12" style="padding-top:1em;">
+                  <div class="col-sm-6">
+                    <div class="sponsor col-sm-12">
+                        <img src="assets/img/logo/sponsors/new/hindustan.gif" />
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                  <div class="sponsor col-sm-12" >
                       <img src="assets/img/logo/sponsors/new/pustak.jpg" />
                   </div>
+                </div>
+
 
                 </div>
-                <div class="col-sm-3">
+
+                <div class="col-sm-2">
                     <h2>Diet Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
                         <img src="assets/img/logo/sponsors/new/falchat.jpg" />
@@ -51,11 +60,12 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <h2>Trading Partner</h2>
+                    <h2>City Perks Partner</h2>
                     <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/hindustan.gif" />
+                        <img src="assets/img/logo/sponsors/new/jaipur.jpg" />
                     </div>
                 </div>
+
 
             </article>
 
@@ -99,18 +109,8 @@
                 </div>
             </article>
             <article>
-                <div class="col-sm-3">
-                    <h2>Interior Design Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/kajaria.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>City Perks Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/jaipur.jpg" />
-                    </div>
-                </div>
+
+
 
             </article>
 
