--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -8,22 +8,31 @@
         </div>
         <div class='event-content' id="sponsors">
             <article>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <h2>Ethinic Partner</h2>
                     <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/kishori.png" />
+                        <img src="assets/img/logo/sponsors/new/kishori.png" style="padding-top: 3em;" />
 
                 </div>
                 </div>
 
-                <div class="col-sm-6" style="padding-top:1em;">
+                <div class="col-sm-8" style="padding-top:1em;">
                   <h2>Event Partners</h2>
-                  <div class="sponsor col-sm-12" style="padding-top:1em;">
+                  <div class="col-sm-6">
+                    <div class="sponsor col-sm-12">
+                        <img src="assets/img/logo/sponsors/new/hindustan.gif" />
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                  <div class="sponsor col-sm-12" >
                       <img src="assets/img/logo/sponsors/new/pustak.jpg" />
                   </div>
+                </div>
+
 
                 </div>
-                <div class="col-sm-3">
+
+                <div class="col-sm-2">
                     <h2>Diet Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
                         <img src="assets/img/logo/sponsors/new/falchat.jpg" />
@@ -41,31 +50,32 @@
                 <div class="col-sm-3">
                     <h2>Interior Design Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/new/kajaria.png" style="padding-top:1em;" />
+                        <img src="assets/img/logo/sponsors/new/kajaria.png" style="padding-top:4em;" />
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <h2>Happiness Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/new/diamond.png" />
+                        <img src="assets/img/logo/sponsors/new/diamond.png" style="padding-top:4em;" />
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <h2>Trading Partner</h2>
+                    <h2>City Perks Partner</h2>
                     <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/hindustan.gif" />
+                        <img src="assets/img/logo/sponsors/new/jaipur.jpg" style="padding-top:4em;"/>
                     </div>
                 </div>
+
 
             </article>
 
             <article>
                 <h2>Education Partners</h2>
                 <div class="sponsor col-sm-4">
-                    <img src="assets/img/logo/sponsors/new/matrix.jpg" />
+                    <img src="assets/img/logo/sponsors/new/matrix.jpg" style="padding-top: 3em;"/>
                 </div>
                 <div class="sponsor col-sm-4">
-                    <img src="assets/img/logo/sponsors/new/rat.png" style="width:60%;" />
+                    <img src="assets/img/logo/sponsors/new/rat.png" style="width:60%;padding-top: 2em;" />
                 </div>
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/appin.jpg" />
@@ -99,18 +109,8 @@
                 </div>
             </article>
             <article>
-                <div class="col-sm-3">
-                    <h2>Interior Design Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/kajaria.png" />
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <h2>City Perks Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
-                        <img src="assets/img/logo/sponsors/new/jaipur.jpg" />
-                    </div>
-                </div>
+
+
 
             </article>
 
