--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -20,7 +20,7 @@
                   <h2>Event Partners</h2>
                   <div class="col-sm-6">
                     <div class="sponsor col-sm-12">
-                        <img src="assets/img/logo/sponsors/new/hindustan.gif" />
+                        <img src="assets/img/logo/sponsors/new/hindustan.gif" style="padding: 0;margin-top: 7px;"/>
                     </div>
                   </div>
                   <div class="col-sm-6">
