--- a/event/assets/partials/partial-menu.html
+++ b/event/assets/partials/partial-menu.html
@@ -1,6 +1,6 @@
 <div class="navigation">
 
-    <a href="javascript:history.back()">
+    <a href="http://www.jecrcrenaissance.in/">
 
     <div class="menu-icon" >
 
