--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -369,7 +369,7 @@
                     <div role="tabpanel" class="tab-pane fade" id="tab4">
                         <div class="row">
                             <h3>
-                                <i>11<sup>st</sup>March 2017</i>
+                                <i>11<sup>th</sup>March 2017</i>
                             </h3>
                             <div class="table-responsive">
                                 <table class="table table-striped">
