--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -73,8 +73,13 @@
                                             <td>Auditorium A – Block</td>
                                         </tr>
                                         <tr>
-                                            <td>Drone Dangal</td>
-                                            <td>1:30 PM - 4:30 PM</td>
+                                            <td>Pen it Down</td>
+                                            <td>12:30 PM - 03:30 PM</td>
+                                            <td>IBM Lab (App. Sci.)</td>
+                                        </tr>
+					     <tr>
+                                            <td>Games of Drones</td>
+                                            <td>01:30 PM - 04:30 PM</td>
                                             <td>GH Lawn(ECE)</td>
                                         </tr>
                                         <tr>
@@ -93,26 +98,7 @@
                                             <td>6:45 PM – 10:00 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                        <!-- <tr> -->
-                                            <!-- <td>The Hunting Writers</td> -->
-                                            <!-- <td>2:00 PM - 4:30 PM</td> -->
-                                            <!-- <td>C-401</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Rap Zap</td> -->
-                                            <!-- <td>1:00 PM - 3:30 PM</td> -->
-                                            <!-- <td>Auditorium</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Raga Night (Singing Contest)</td> -->
-                                            <!-- <td>4:00 PM - 6:30 PM</td> -->
-                                            <!-- <td>Central Lawn</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Adaa (The Fashion Show)</td> -->
-                                            <!-- <td>6:45 PM - 9:45 PM</td> -->
-                                            <!-- <td>Central Lawn</td> -->
-                                        <!-- </tr> -->
+                                   
 
                                     </tbody>
                                 </table>
@@ -139,6 +125,11 @@
                                             <td>Meditation</td>
                                             <td>9:30 AM - 12:30 PM</td>
                                             <td>Spiritual Cell </td>
+                                        </tr>
+					       <tr>
+                                            <td>Line Follower</td>
+                                            <td>9:30 AM - 12:30 PM</td>
+                                            <td>B-301(ECE) </td>
                                         </tr>
                                         <tr>
                                             <td>Paintball</td>
@@ -192,11 +183,7 @@
                                             <td>10:00 AM - 1:00 PM</td>
                                             <td>QUADRANGLE A BLOCK</td>
                                         </tr>
-                                        <tr>
-                                            <td>Pen it Down</td>
-                                            <td>12:30 PM – 3:30 PM</td>
-                                            <td>C 501 (App Sci)</td>
-                                        </tr>
+                                     
                                         <tr>
                                             <td>Quiz</td>
                                             <td>12:30 PM - 4:30 PM</td>
@@ -223,16 +210,7 @@
                                             <td>7:30 PM – 10:00 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                        <!-- <tr> -->
-                                            <!-- <td>Rockathon</td> -->
-                                            <!-- <td>3:30 PM - 6:30 PM</td> -->
-                                            <!-- <td>Central Lawn</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Bootstrapping (Dance Competition)</td> -->
-                                            <!-- <td>6:45 PM - 9:45 PM</td> -->
-                                            <!-- <td>Central Lawn</td> -->
-                                        <!-- </tr> -->
+                                    
 
                                     </tbody>
                                 </table>
@@ -259,6 +237,11 @@
                                             <td>Techno InBuzz</td>
                                             <td>9:30 AM - 11:30 AM</td>
                                             <td>B - Block Fountain Area (ECE) </td>
+                                        </tr>
+					     <tr>
+                                            <td>Just C</td>
+                                            <td>9:30 AM – 3:30 PM</td>
+                                            <td>CP-1 to CP-8 (CSE/IT)</td>
                                         </tr>
                                         <tr>
                                             <td>Subito</td>
@@ -340,27 +323,7 @@
                                             <td>6:45 PM – 9:45 PM</td>
                                             <td>Central Lawn</td>
                                         </tr>
-                                        <!-- <tr> -->
-                                            <!-- <td>Spell Bee</td> -->
-                                            <!-- <td>1:30 PM - 3:30 PM</td> -->
-                                            <!-- <td>Auditorium</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Panel Discussion Alumni - Part II</td> -->
-                                            <!-- <td>2:00 PM - 3:00 PM</td> -->
-                                            <!-- <td>Conference Hall A-Block</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Step Up</td> -->
-                                            <!-- <td>4:00 PM - 7:00 PM</td> -->
-                                            <!-- <td>Quadrangle A-Block</td> -->
-                                        <!-- </tr> -->
-                                        <!-- <tr> -->
-                                            <!-- <td>Atulya Bharat</td> -->
-                                            <!-- <td>7:15 PM - 9:45 PM</td> -->
-                                            <!-- <td>Central Lawn</td> -->
-                                        <!-- </tr> -->
-
+                                     
                                     </tbody>
                                 </table>
                             </div>
@@ -381,31 +344,22 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>Line Follower</td>
-                                            <td>9:30 AM - 12 :30 PM</td>
-                                            <td>B-301 (ECE)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Just C</td>
-                                            <td>9:30 AM - 3:30 PM</td>
-                                            <td>CP-1 to CP-8 (CSE & IT)</td>
-                                        </tr>
-                                        <tr>
+					      <tr>
                                             <td>Street Football</td>
-                                            <td>9:30 AM - 6:30 PM</td>
-                                            <td>BH2 Lawn</td>
+                                            <td>9:30 AM - 6 :30 PM</td>
+                                            <td>BH-2 Lawn</td>
+                                        </tr>
+					      <tr>
+                                            <td>Pillow Fight </td>
+                                            <td>9:30 AM - 2 :30 PM</td>
+                                            <td>Volleyball Court</td>
                                         </tr>
                                         <tr>
-                                            <td>Pillow Fight</td>
-                                            <td>9:30 AM - 2:30 PM</td>
-                                            <td>Volleyball Court </td>
+                                            <td>LAN Gaming</td>
+                                            <td>9:30 AM - 7 :30 PM</td>
+                                            <td>CP-21,22,23</td>
                                         </tr>
-                                        <tr>
-                                            <td>LAN Gaming </td>
-                                            <td>9:30 AM - 7:30 PM</td>
-                                            <td>CP – 21, 22, 23</td>
-                                        </tr>
+                                    
                                         <tr>
                                             <td>Paintball </td>
                                             <td>9:30 AM - 6:30 PM</td>
