--- a/event/assets/partials/partial-sponsors.html
+++ b/event/assets/partials/partial-sponsors.html
@@ -7,24 +7,30 @@
             </div>
         </div>
         <div class='event-content' id="sponsors">
+          <article>
+
+
+          <div class ="col-sm-12">
+              <h2>Trading Partner</h2>
+              <div class="sponsor col-sm-12">
+                  <img src="assets/img/logo/sponsors/new/hindustan.gif" style="padding: 0;margin-top: 7px;"/>
+              </div>
+            </div>
+            </article>
             <article>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <h2>Ethinic Partner</h2>
-                    <div class="sponsor col-sm-offset-2 col-sm-8">
+                    <div class="sponsor col-sm-offset-2 col-sm-10">
                         <img src="assets/img/logo/sponsors/new/kishori.png" style="padding-top: 3em;" />
 
                 </div>
                 </div>
 
-                <div class="col-sm-8" style="padding-top:1em;">
+                <div class="col-sm-6" style="padding-top:1em;">
                   <h2>Event Partners</h2>
-                  <div class="col-sm-6">
-                    <div class="sponsor col-sm-12">
-                        <img src="assets/img/logo/sponsors/new/hindustan.gif" style="padding: 0;margin-top: 7px;"/>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                  <div class="sponsor col-sm-12" >
+
+                  <div class="col-sm-12">
+                  <div class="sponsor col-sm-10 col-sm-offset-1" >
                       <img src="assets/img/logo/sponsors/new/pustak.jpg" />
                   </div>
                 </div>
@@ -32,10 +38,10 @@
 
                 </div>
 
-                <div class="col-sm-2">
-                    <h2>Diet Partner</h2>
+                <div class="col-sm-3">
+                    <h2>Hotel Partner</h2>
                     <div class="sponsor col-sm-offset-1 col-sm-10">
-                        <img src="assets/img/logo/sponsors/new/falchat.jpg" />
+                        <img src="assets/img/logo/sponsors/new/royal.gif" />
                     </div>
                 </div>
 
@@ -79,6 +85,12 @@
                 </div>
                 <div class="sponsor col-sm-4">
                     <img src="assets/img/logo/sponsors/new/appin.jpg" />
+                </div>
+                <div class="sponsor col-sm-4 col-sm-offset-2" style="padding-top: 3em;">
+                    <img src="assets/img/logo/sponsors/new/engiaca.png" />
+                </div>
+                <div class="sponsor col-sm-4">
+                    <img src="assets/img/logo/sponsors/new/engineer.png" />
                 </div>
 
             </article>
