--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -150,7 +150,7 @@
                                         <tr>
                                             <td>Catch The Phrase/Let me Speak</td>
                                             <td>9:30AM -12:00 NOON</td>
-                                            <td>C 401 (IT), C 501 (App Sci)
+                                            <td>C 501 (App Sci), C 401 (IT) 
 </td>
                                         </tr>
                                         <tr>
@@ -413,8 +413,14 @@
 										<tr>
                                             <td>Combatant</td>
                                             <td>12:30 PM – 3:30 PM</td>
-                                            <td>EE Lab (EE)Comm. lab (ECE)
+                                            <td>Comm. lab (ECE)
 </td>
+										<tr>											<tr>
+                                            <td>War Tech Ren-17</td>
+                                            <td>3:30 PM – 6:30 PM</td>
+                                            <td>EE Lab 
+</td>
+											
                                         </tr>	
 										<tr>
                                             <td>Formula Zero</td>
