--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -413,14 +413,13 @@
 										<tr>
                                             <td>Combatant</td>
                                             <td>12:30 PM – 3:30 PM</td>
-                                            <td>Comm. lab (ECE)
+                                            <td>EE Lab (EE)Comm. lab (ECE)
 </td>
-										<tr>											<tr>
-                                            <td>War Tech Ren-17</td>
-                                            <td>3:30 PM – 6:30 PM</td>
-                                            <td>EE Lab 
-</td>
-											
+                                        </tr>	
+                   <tr>
+                                              <td>Combatant</td>
+                                              <td>3:30 PM – 6:30 PM</td>
+                                              <td>EE Lab (EE)Comm</td>
                                         </tr>	
 										<tr>
                                             <td>Formula Zero</td>
