--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -417,7 +417,7 @@
 </td>
                                         </tr>	
                    <tr>
-                                              <td>Combatant</td>
+                                              <td>War Tech Ren-17</td>
                                               <td>3:30 PM – 6:30 PM</td>
                                               <td>EE Lab (EE)Comm</td>
                                         </tr>	
