--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -413,7 +413,7 @@
 										<tr>
                                             <td>Combatant</td>
                                             <td>12:30 PM – 3:30 PM</td>
-                                            <td>EE Lab (EE)Comm. lab (ECE)
+                                            <td>Comm. lab (ECE)
 </td>
                                         </tr>	
                    <tr>
