--- a/event/assets/partials/partial-itinerary.html
+++ b/event/assets/partials/partial-itinerary.html
@@ -419,7 +419,7 @@
                    <tr>
                                               <td>War Tech Ren-17</td>
                                               <td>3:30 PM – 6:30 PM</td>
-                                              <td>EE Lab (EE)Comm</td>
+                                              <td>EE Lab (EE)</td>
                                         </tr>	
 										<tr>
                                             <td>Formula Zero</td>
